<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/margin"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:gravity="center"
            android:textColor="@color/colorActionBarText"
            android:textAppearance="@android:style/TextAppearance.DeviceDefault.Medium"
            android:text="@string/add_non_inventory_title"/>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:hint="@string/product_name"

            >
        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:inputType="text"
            android:padding="@dimen/padding"
            android:layout_margin="@dimen/margin"
            android:textColorHint="@color/popuptextcolor"
             />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:hint="@string/selling_price"

            >
        <EditText
            android:id="@+id/et_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="@dimen/margin"
            android:inputType="numberDecimal"
            android:padding="@dimen/padding"
            android:textColorHint="@color/popuptextcolor"
            />

        </android.support.design.widget.TextInputLayout>
        <Switch
            android:id="@+id/id_create_switch"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding"
            android:text="@string/create_new_product"
            android:textColor="@color/colorPrimaryAccentAquaGreen" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_weight="1">

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn_selector"
        android:padding="@dimen/padding"
        android:textColor="@color/colorPrimaryMainWhite"
        android:text="@string/send_to_cart" />

    <Button
        android:id="@+id/id_btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin"
        android:background="@drawable/bg_btn_dull_selector"
        android:padding="@dimen/padding"
        android:textColor="@color/colorPrimaryMainWhite"
        android:text="@string/cancel" />

    </LinearLayout>
    </LinearLayout>


</LinearLayout>




























